Add 2 more songs

--- a/songsList.html
+++ b/songsList.html
@@ -8,6 +8,8 @@
         <li>Em khong sai chung ta sai</li>
         <li>Hoa no khong mau</li>
         <li>Khong the cung nhau suot kiep</li>
+        <li>Co chac yeu la day</li>
+        <li>Yeu thi yeu, khong yeu thi yeu</li>
     </ul>
 </body>
 </html>
